--- a/ViewDataViewer/Properties/launchSettings.json
+++ b/ViewDataViewer/Properties/launchSettings.json
@@ -26,7 +26,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": "true",
-      "applicationUrl": "http://localhost:5000"
+      "applicationUrl": "https://localhost:5000"
     }
   }
 }
