Updated TeeFax address

--- a/ViewDataViewer/package.json
+++ b/ViewDataViewer/package.json
@@ -3,13 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "dependencies": {},
   "devDependencies": {
     "@microsoft/signalr": "^5.0.0",
     "@types/hammerjs": "^2.0.36",
     "@types/jquery": "^3.5.4",
     "@types/knockout": "^3.4.69",
     "@types/lodash": "^4.14.165",
+    "eslint": "^8.45.0",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-cssmin": "^0.2.0",
