Set logging quota

--- a/ViewDataViewer/nlog.config
+++ b/ViewDataViewer/nlog.config
@@ -14,7 +14,7 @@
   <targets>
     <!-- write logs to file -->
     <target xsi:type="File" name="allfile" fileName="${basedir}/logs/${shortdate}.log"
-                    layout="${longdate}|${logger}|${uppercase:${level}}|${message} ${exception}" />
+                    layout="${longdate}|${logger}|${uppercase:${level}}|${message} ${exception}" maxArchiveFiles="9" archiveAboveSize="1000000000" />
   </targets>
 
   <rules>
