--- a/ViewDataViewer/nlog.config
+++ b/ViewDataViewer/nlog.config
@@ -19,6 +19,6 @@
 
   <rules>
     <!--All logs, including from Microsoft-->
-    <logger name="*" minlevel="Trace" writeTo="allfile" />
+    <logger name="*" minlevel="Debug" writeTo="allfile" />
   </rules>
 </nlog>
