--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "dependencies": {
     "browserify": "^17.0.0",
     "eslint-scope": "^5.1.1",
-    "gulp": "^4.0.0",
+    "gulp": "^5.0.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-typescript": "^6.0.0-alpha.1",
     "gulp-uglify": "^3.0.2",
+    "sass": "^1.77.4",
     "tsify": "^5.0.2",
     "typescript": "^4.0.5",
     "vinyl-buffer": "^1.0.1",
